// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RingGraph /> should match the snapshots 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%),linear-gradient(-90deg,#e0e0e0 50%,#002F7B 50%);
  border-radius: 50%;
  box-shadow: 0px 3px 1px -2px rgba(66,66,66,0.2),0px 2px 2px 0px rgba(66,66,66,0.14),0px 1px 5px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3 {
  margin-left: 12px;
  color: #002F7B;
  font-size: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      0% compatível
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RingGraph /> should match the snapshots 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%),linear-gradient(0deg,#e0e0e0 50%,#002F7B 50%);
  border-radius: 50%;
  box-shadow: 0px 3px 1px -2px rgba(66,66,66,0.2),0px 2px 2px 0px rgba(66,66,66,0.14),0px 1px 5px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3 {
  margin-left: 12px;
  color: #002F7B;
  font-size: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      25% compatível
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RingGraph /> should match the snapshots 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%),linear-gradient(90deg,#e0e0e0 50%,#002F7B 50%);
  border-radius: 50%;
  box-shadow: 0px 3px 1px -2px rgba(66,66,66,0.2),0px 2px 2px 0px rgba(66,66,66,0.14),0px 1px 5px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3 {
  margin-left: 12px;
  color: #002F7B;
  font-size: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      50% compatível
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RingGraph /> should match the snapshots 4`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  background-image: linear-gradient(-90deg,#002F7B 50%,transparent 50%),linear-gradient(0deg,#002F7B 50%,#e0e0e0 50%);
  border-radius: 50%;
  box-shadow: 0px 3px 1px -2px rgba(66,66,66,0.2),0px 2px 2px 0px rgba(66,66,66,0.14),0px 1px 5px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3 {
  margin-left: 12px;
  color: #002F7B;
  font-size: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      75% compatível
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RingGraph /> should match the snapshots 5`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  background-image: linear-gradient(-90deg,#002F7B 50%,transparent 50%),linear-gradient(90deg,#002F7B 50%,#e0e0e0 50%);
  border-radius: 50%;
  box-shadow: 0px 3px 1px -2px rgba(66,66,66,0.2),0px 2px 2px 0px rgba(66,66,66,0.14),0px 1px 5px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3 {
  margin-left: 12px;
  color: #002F7B;
  font-size: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      100% compatível
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RingGraph /> should match the snapshots 6`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  background-image: linear-gradient(-90deg,#9E003F 50%,transparent 50%),linear-gradient(90deg,#9E003F 50%,#e0e0e0 50%);
  border-radius: 50%;
  box-shadow: 0px 3px 1px -2px rgba(66,66,66,0.2),0px 2px 2px 0px rgba(66,66,66,0.14),0px 1px 5px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3 {
  margin-left: 12px;
  color: #002F7B;
  font-size: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      100% compatível
    </div>
  </div>
</DocumentFragment>
`;
